# Codex-Manager

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.en.md  README.md
.github/workflows/: ci-verify.yml  release-finalize.yml  release-linux.yml  release-macos-beta.yml  release-multi-platform.yml  release-service-linux.yml  release-service-macos.yml  release-service-windows.yml  release-windows.yml
apps/: index.html  package.json
apps/src/: api.js  main.js  state.js
apps/src-tauri/: Cargo.toml  tauri.conf.json
apps/src-tauri/icons/: icon.icns
apps/src-tauri/src/: lib.rs  updater.rs
apps/src/services/: connection.js  connection.test.js  data.js  data.test.js  login-flow.js  login-flow.test.js  management-actions.js  refresh.js  refresh.test.js  service-lifecycle.js
apps/src/styles/: base.css  components.css  layout.css  performance.css  responsive.css
apps/src/ui/: button-busy.js  dom.js  startup-mask.js  theme.js
apps/src/utils/: format.js  format.test.js  request.js
apps/src/views/: accounts.test.js  apikeys.js  dashboard-recommendations.js  dashboard-recommendations.test.js  dashboard.js  (+8 more)
apps/tests/: account-search-debounce.test.mjs  apikeys-page.test.mjs  refresh-flow.test.mjs  requestlog-refresh.test.mjs
crates/core/: Cargo.toml
crates/service/: Cargo.toml  build.rs
crates/start/: Cargo.toml  build.rs
crates/web/: Cargo.toml  build.rs
crates/web/src/: embedded_ui.rs  main.rs
docker/: Dockerfile.web  docker-compose.yml
scripts/: bump-version.ps1  rebuild.ps1  rebuild.test.ps1
scripts/tests/: codex_stream_probe.ps1
(+255 files in other folders)
