[package]
name = "CodexManager"
version = "0.0.9"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
codexmanager-core = { path = "../../crates/core" }
codexmanager-service = { path = "../../crates/service" }
webbrowser = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
